@@ -7,6 +7,9 @@ DOWNLOADS = $(HOME)/u/Downloads
 GREP="grep --include="*.py" -srnE"
 SRC=src/python
 
+PYTHON=python3
+#PYTHON=$(HOME)/src/python/vginstall/bin/python3
+
 all: compile
 
 
@@ -42,7 +45,7 @@ SOURCES =					\
 	$(CROOT)/grammar.h
 
 compile: $(SOURCES)
-	python3 setup.py build_ext -i
+	$(PYTHON) setup.py build_ext -i
 
 .PHONY: build
 build: compile
@@ -55,7 +58,7 @@ dump_lexer:
 
 # Check for memory leaks.
 grind:
-	valgrind --leak-check=full /usr/local/bin/python3 bean-sandbox $(INPUT)
+	valgrind --leak-check=full $(PYTHON) bean-sandbox $(INPUT)
 
 # Regenerate the website.
 html docs:
@@ -120,12 +123,12 @@ showdeps-core: build/beancount-core.pdf
 
 # Run in the debugger.
 debug:
-	gdb --args /usr/local/bin/python3 /home/blais/p/beancount/bin/bean-sandbox $(INPUT)
+	gdb --args $(PYTHON) /home/blais/p/beancount/bin/bean-sandbox $(INPUT)
 
 
 # Bake a release.
 release:
-	python3 setup.py sdist register
+	$(PYTHON) setup.py sdist register
 
 
 # Run the unittests.
@@ -160,7 +163,7 @@ example $(EXAMPLE):
 
 TUTORIAL=examples/tutorial
 tutorial: $(EXAMPLE)
-	python3 src/python/beancount/scripts/tutorial.py $(EXAMPLE) $(TUTORIAL)
+	$(PYTHON) src/python/beancount/scripts/tutorial.py $(EXAMPLE) $(TUTORIAL)
 
 
 # Run the web server.
