@@ -6,6 +6,9 @@ Note: This file contains only changes in the 'default' branch.
 
 2016-05-01
 
+  - Fixed issue #124, a leak in the grammar parser which would leak the entire
+    set of entries on every instance of parse.
+
   - Fixed some warnings about unclosed files which occur only on default python
     branch.
 
